# food_delivery_app

./: Makefile  bazel-bin  bazel-food_delivery_app  bazel-out  bazel-testlogs  go.mod  go.sum
src/api_gateway/: .env  main.go
src/api_gateway/configs/: config.go  models.csv
src/api_gateway/dependencies/: grpc_connections.go
src/api_gateway/docs/: docs.go  swagger.json  swagger.yaml
src/api_gateway/handlers/: handler.go
src/api_gateway/handlers/auth_handler/: auth_handle.go  customer.go
src/api_gateway/handlers/order_handler/: courier.go  order.go
src/api_gateway/handlers/restaurant/: BUILD.bazel  category.go  item.go  restaurant.go
src/api_gateway/mappers/: auth.go  order.go  restaurant.go
src/api_gateway/models/: auth.go  order.go  restaurant.go
src/api_gateway/pkg/tracing/: mux.go
src/api_gateway/routers/: auth_router.go  customer_router.go  order_router.go  restaurant_router.go
src/api_gateway/utils/: jwt_generator.go
src/auth_service/: .env  main.go
src/auth_service/migrations/: 001_customer.down.sql  001_customer.up.sql  002_customer_device.down.sql  002_customer_device.up.sql
src/auth_service/pkg/db/: db.go
src/auth_service/pkg/entity/: customer.go
src/auth_service/pkg/mappers/: customer.go
src/auth_service/service/: customer.go  staff_auth.go
src/auth_service/storage/: storage.go
src/auth_service/storage/postgres/: customer.go  staff_auth.go
src/auth_service/storage/repo/: customer.go  staff_auth.go
src/idl/auth_service/: staff_auth.pb.go  staff_auth.proto
src/idl/order_service/: BUILD.bazel  order_service.pb.go  order_service.proto
src/idl/restaurant_service/: BUILD.bazel  restaurant_service.pb.go  restaurant_service.proto
src/libs/constants/: error.go
src/libs/utils/: validate.go  web_utils.go
src/order_service/: .env  BUILD.bazel  Makefile  main.go
src/order_service/configs/: BUILD.bazel  config.go
src/order_service/entity/: courier.go  order.go  restaurant.go
src/order_service/mappers/: courier.go  item.go  order.go  restaurant.go
src/order_service/migrations/: 001_order.down.sql  001_order.up.sql  002_courier.up.sql
src/order_service/pkg/db/: BUILD.bazel  db.go
src/order_service/pkg/db/constants/: error.go
src/order_service/server/: BUILD.bazel  grpc.go
src/order_service/service/: BUILD.bazel  courier.go  order.go  restaurant.go
src/order_service/storage/: BUILD.bazel  storage.go
src/order_service/storage/postgres/: BUILD.bazel  courier.go  order.go
src/order_service/storage/repo/: BUILD.bazel  category.go  courier.go  order.go
src/order_service/tracer/: BUILD.bazel  tracer.go
src/restaurant_service/: .env  BUILD.bazel  main.go
src/restaurant_service/configs/: BUILD.bazel  config.go
src/restaurant_service/entity/: category.go  item.go
src/restaurant_service/mappers/: category.go
src/restaurant_service/migrations/: 001_restaurant.up.sql  002_item.down.sql  002_item.up.sql
src/restaurant_service/pkg/db/: BUILD.bazel  db.go
src/restaurant_service/pkg/db/constants/: error.go
src/restaurant_service/server/: BUILD.bazel  grpc.go
src/restaurant_service/service/: BUILD.bazel  category.go  item.go  restaurant.go
src/restaurant_service/storage/: BUILD.bazel  storage.go
src/restaurant_service/storage/postgres/: category.go  item.go  restaurant.go
src/restaurant_service/storage/repo/: item.go  restaurant.go
src/restaurant_service/tracer/: BUILD.bazel  tracer.go
