load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "order_service_lib",
    srcs = ["main.go"],
    data = [
        ".env",
    ],
    importpath = "monorepo/src/order_service",
    visibility = ["//visibility:private"],
    deps = [
        "//src/libs/log",
        "//src/order_service/configs",
        "//src/order_service/pkg/db",
        "//src/order_service/server",
        "//src/order_service/service",
        "//src/order_service/storage",
        "//src/order_service/tracer",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_fx//fxevent",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_binary(
    name = "restaurant_service",
    embed = [":order_service_lib"],
    visibility = ["//visibility:public"],
)
