load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tracer",
    srcs = ["tracer.go"],
    importpath = "monorepo/src/order_service/tracer",
    visibility = ["//visibility:public"],
    deps = [
        "//src/libs/log",
        "//src/libs/tracer",
        "//src/order_service/configs",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_uber_jaeger_lib//metrics/expvar",
    ],
)

alias(
    name = "go_default_library",
    actual = ":tracer",
    visibility = ["//visibility:public"],
)
