load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "restaurant",
    srcs = ["restaurant.go"],
    importpath = "monorepo/src/api_gateway/handlers/restaurant",
    visibility = ["//visibility:public"],
    deps = ["//src/libs/log"],
)

alias(
    name = "go_default_library",
    actual = ":restaurant",
    visibility = ["//visibility:public"],
)
